Implement JDK19, virtual threads, optimize image loading